--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "booking-app",
   "version": "0.0.0",
+  "eslintConfig": {
+    "env": {
+        "browser": true,
+        "node": true
+    }
+},
+
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "jsonwebtoken": "^9.0.1",
+    "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -28,12 +36,19 @@
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "events":"^3.3.0",
+    "util":"^0.12.5"
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false
   }
 }
