--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.0",
   "eslintConfig": {
     "env": {
-        "browser": true,
-        "node": true
+      "browser": true,
+      "node": true
     }
-},
-
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -25,6 +24,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "bcrypt": "^5.1.0",
     "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -34,8 +34,11 @@
     "@angular-devkit/build-angular": "^16.1.3",
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.4.1",
+    "events": "^3.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -43,8 +46,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3",
-    "events":"^3.3.0",
-    "util":"^0.12.5"
+    "util": "^0.12.5"
   },
   "browser": {
     "crypto": false,
